[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/AttackCnotrol.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/PlayerDete.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Boss.gd" type="Script" id=6]
[ext_resource path="res://abstract-platformer-370-assets/PNG/Enemies/enemyWalking_1.png" type="Texture" id=7]
[ext_resource path="res://abstract-platformer-370-assets/PNG/Enemies/enemyWalking_2.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 25.0799

[sub_resource type="CircleShape2D" id=2]
radius = 33.0151

[sub_resource type="CircleShape2D" id=4]
radius = 212.002

[sub_resource type="CircleShape2D" id=5]
radius = 58.0

[sub_resource type="Animation" id=6]
resource_name = "Attack"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.9, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1.4, 1.4 ), Vector2( 1.6, 1.6 ), Vector2( 1.8, 1.8 ), Vector2( 2, 2 ), Vector2( 2.2, 2.2 ), Vector2( 2.4, 2.4 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "Idle"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1.2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="Boss" type="KinematicBody2D"]
collision_layer = 32
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 3 )]
maxHealth = 10

[node name="PlayerDete" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="PlayerDete" index="0"]
self_modulate = Color( 1, 0, 0, 1 )
shape = SubResource( 4 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 5 )

[node name="AttackCnotrol" parent="." instance=ExtResource( 2 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 6 )
anims/Idle = SubResource( 7 )
anims/RESET = SubResource( 8 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="noHealth" from="Stats" to="." method="_on_Stats_noHealth"]

[editable path="Hurtbox"]
[editable path="PlayerDete"]
[editable path="Hitbox"]
